--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* root, DOM, all */
+
 * {
     margin: 0;
     padding: 0;
@@ -8,18 +10,23 @@
 
 :root {
     --sidebar-color: #41e0bb;
-    --header-color: rgb(206, 19, 19);
+    --header-color: #ffffff;
+    --text-color-white: #ffffff;
     --cards-color: white;
     --text-color-sidebar: #004d40;
     --text-color: #131313;
+    --buttons-color: #1992d4;
 }
+
+/* Main containers layouts */
 
 .grid-main-container {
     display: grid;
     height: 100vh;
-    grid-template-columns: 2fr 3fr 3fr 3fr;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: 1fr 3fr 3fr 3fr;
 }
+
+/* Sidebar layout START */
 
 .sidebar {
     background-color: var(--sidebar-color);
@@ -41,38 +48,23 @@ ul > li {
     font-size: 15px;
 
     cursor: pointer;
+    text-decoration: none;
+    list-style: none;
 }
 
 ul > li > span {
     font-size: 20px;
     color: var(--text-color);
     font-weight: 900;
-    padding: 15px;
+    padding: 10px;
 }
 
 ul > li:first-child {
     padding-top: 20px;
 }
+
 ul > li:nth-child(7) {
     padding-top: 50px;
-}
-
-.header {
-    background-color: var(--header-color);
-    grid-column: 2 / 5;
-    grid-row: 1 / 2;
-}
-
-.main-content {
-    background-color: aquamarine;
-    grid-column: 2 / 4;
-    grid-row: 2 / 5;
-}
-
-.information {
-    background-color: yellow;
-    grid-column: 4 / 5;
-    grid-row: 2 / 5;
 }
 
 .logo-container {
@@ -83,7 +75,6 @@ ul > li:nth-child(7) {
     padding: 10px;
     font-size: 25px;
     font-weight: 900;
-  
 }
 
 .logo {
@@ -92,14 +83,151 @@ ul > li:nth-child(7) {
     align-self: center;
 }
 
-.main-content {
-    display: grid;
-    grid-auto-flow: column;
-    gap: 15px;
-    background-color: gray;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+/* Sidebar layout END */
 
+/* Header Layout START*/
+
+.header {
+    background-color: var(--header-color);
+    grid-column: 2 / 5;
+    grid-row: 1 / 3;
+    
+    display: grid;
+    gap: 10px;
+
+    grid-template-columns: 3fr 2fr;
+
+}
+
+.header-search-bar {
+    grid-column: 1 / 2;
+    padding-top: 20px;
+    
+}
+
+.header-search-bar-container {
+    display: flex;
+    align-content: center;
+    justify-content: flex-start;
+    padding-left: 30px;
+ 
+    gap: 10px;
+}
+
+.header-search-bar-container > span {
+    font-size: 20px;
+}
+
+.search-bar {
+    font-size: 14px;
+    width: 80%;
+    border-radius: 15px;
+    padding: 5px 20px 5px 20px;
+
+    background-color: #e2e8f0;
+    border: 0px;
+}
+
+.search-bar:focus {
+    outline: none;
+}
+
+.profile-right-corner {
+    grid-column: 2 / 3;
+}
+
+.profile-right-corner-container {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    gap: 20px;
+    padding-top: 10px;
+}
+
+.profile-right-corner-container > span > p {
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.profile-img {
+    width: 50px;
+}
+
+.profile-img-greet {
+    width: 80px;
+}
+
+.profile-name-greet {
+    grid-column: 1 / 2;
+}
+
+.profile-name-greet-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    padding-left: 30px;
+    gap: 12px;
+}
+
+.profile-name-greeting-text {
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.hi {
+    font-size: 14px;
+}
+
+
+.profile-quick-buttons {
+    grid-column: 2 / 3;
+    align-self: center;
+}
+
+.profile-quick-buttons-container {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    padding-right: 25px;
+}
+
+.quick-buttons {
+    font-size: 16px;
+    font-weight: 600;
+    width: 90px;
+    border-radius: 20px;
+    outline: none;
+    border: 0;
+    padding: 8px 5px 8px 5px;
+    background-color: var(--buttons-color);
+    color: var(--text-color-white);
+}
+
+/* Header Layout END */
+
+/* Information section layout START */
+
+.information {
+    background-color: #e2e8f0;
+    grid-column: 4 / 5;
+    grid-row: 3 / 5;
+}
+
+/* Information section layout END
+
+/* Main content layout START*/
+
+.main-content {
+    grid-column: 2 / 4;
+    grid-row: 3 / 5;
+
+    display: grid;
+    gap: 15px;
+    background-color: #e2e8f0;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+ 
     align-items: center;
     align-content: center;
     justify-items: center;
@@ -107,12 +235,14 @@ ul > li:nth-child(7) {
 }
 
 .heading-main-content {
+    grid-column: span 1;
     justify-self: start;
     align-self: end;
-    padding-left: 20px;
+    padding-left: 30px;
     font-size: 12px;
-    grid-column: span 2;
 }
+
+/* Cards layout main content */
 
 .card {
     display: flex;
@@ -120,8 +250,10 @@ ul > li:nth-child(7) {
     justify-content: flex-start;
 
     padding: 15px;
-    background-color: white;
-    border-left: 5px solid orange;
+    background-color: #ffffff;
+    box-shadow: 2px 2px 5px -2px rgb(90, 88, 88);
+    border-radius: 6px;
+    border-left: 5px solid #f0b429;
     width: 320px;
     height: 140px;
 }
@@ -134,6 +266,7 @@ ul > li:nth-child(7) {
 
 .card-text {
     font-size: 12px;
+    color: #666;
  
 }
 
@@ -141,3 +274,5 @@ ul > li:nth-child(7) {
     align-self: flex-end;
     margin-top: 20px;
 }
+
+/* Main content layout END*/
