--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     --text-color-sidebar: #004d40;
     --text-color: #131313;
     --buttons-color: #1992d4;
+    --main-content-color: #e2e8f0;
 }
 
 /* Main containers layouts */
@@ -23,7 +24,8 @@
 .grid-main-container {
     display: grid;
     height: 100vh;
-    grid-template-columns: 1fr 1fr 4fr 1fr;
+    grid-template-columns: 1fr 6fr;
+    grid-template-rows: 1fr 1fr 1fr;
 }
 
 /* Sidebar layout START */
@@ -31,7 +33,7 @@
 .sidebar {
     background-color: var(--sidebar-color);
     grid-column:  1 / 1;
-    grid-row: 1 / 5;
+    grid-row: 1 / 4;
 
     display: grid;
     gap: 15px;
@@ -89,8 +91,8 @@ ul > li:nth-child(7) {
 
 .header {
     background-color: var(--header-color);
-    grid-column: 2 / 5;
-    grid-row: 1 / 3;
+    grid-column: 2 / 3;
+    grid-row: 1 / 1;
     
     display: grid;
     gap: 10px;
@@ -208,23 +210,23 @@ ul > li:nth-child(7) {
 
 /* Information section layout START */
 
-.information {
-    background-color: #e2e8f0;
-    grid-column: 4 / 5;
-    grid-row: 3 / 5;
+.announcements-container {
+    grid-column: 2 / 3;
+    grid-row: 1 / 1;
 
-    display: grid;
-    gap: 20px;
 
-    align-items: center;
-    align-content: flex-start;
-    justify-items: flex-start;
 
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));;
-    grid-auto-flow: row;
-    padding-bottom: 25px;
-    padding-top: 25px;
-    padding-right: 25px;
+    width: 100%;
+    height: 100%;
+
+
+}
+
+.trending-container {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    width: 100%;
+    padding: 0;
 }
 
 .trending-img {
@@ -242,7 +244,6 @@ ul > li:nth-child(7) {
     box-shadow: 2px 2px 5px -2px rgb(90, 88, 88);
 
 }
-
 
 .content-item {
     border-bottom: 1px solid black;
@@ -267,11 +268,12 @@ ul > li:nth-child(7) {
 }
 
 .heading-announcements,
-.heading-trending {
-    grid-column: span 1;
-    justify-self: start;
-    align-self: end;
+.heading-trending,
+.heading-main-content {
+    padding-top: 10px;
+    padding-bottom: 3px;
     font-size: 16px;
+   
 }
 
 
@@ -312,33 +314,42 @@ ul > li:nth-child(7) {
 /* Main content layout START*/
 
 .main-content {
-    grid-column: 2 / 4;
+    grid-column: 2 / 3;
 
     display: grid;
-    gap: 20px;
-    justify-items: center;
+    gap: 15px;
+  
     align-items: center;
+  
  
-    background-color: #e2e8f0;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-
-    padding-bottom: 100%;
-    padding-top: 25px;
-    
-
+    background-color: var(--main-content-color);
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 2fr 1fr
 }
 
 .heading-main-content {
-    grid-column: span 1;
-    justify-self: start;
-    align-self: end;
-    padding-left: 30px;
-    font-size: 12px;
+    padding-left: 15px;
+    font-size: 12px;  
 
-    
 }
 
 /* Cards layout main content */
+
+.cards {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+ 
+    display: grid;
+    justify-content: space-evenly;
+    justify-items: center;
+    gap: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    width: 100%;
+  
+    
+}
 
 .card {
     display: flex;
@@ -349,9 +360,9 @@ ul > li:nth-child(7) {
     background-color: #ffffff;
     box-shadow: 2px 2px 5px -2px rgb(90, 88, 88);
     border-radius: 6px;
-    border-left: 5px solid #f0b429;
-    width: 360px;
+    border-left: 5px solid #f0b429;;
     height: 140px;
+    width: 100%;
 }
 
 .card-heading {
@@ -372,3 +383,4 @@ ul > li:nth-child(7) {
 }
 
 /* Main content layout END*/
+
