--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     display: grid;
     height: 100vh;
     grid-template-columns: 1fr 6fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
 }
 
 /* Sidebar layout START */
@@ -212,26 +212,22 @@ ul > li:nth-child(7) {
 
 .announcements-container {
     grid-column: 2 / 3;
-    grid-row: 1 / 1;
+    grid-row: 1 / 2;
 
-
-
-    width: 100%;
-    height: 100%;
-
-
+    display: grid;
+  
+    align-self: flex-start;
+    padding-right: 30px;
+    width: 90%;
 }
 
-.trending-container {
-    grid-column: 2 / 3;
-    grid-row: 1 / 3;
-    width: 100%;
-    padding: 0;
+.open-icon {
+    display: none;
 }
 
 .trending-img {
     width: 35px;
-    border-radius: 50%;
+    
 }
 
 .content-announcements {
@@ -239,7 +235,7 @@ ul > li:nth-child(7) {
     flex-direction: column;
 
     background-color: var(--header-color);
-    padding: 20px;
+    padding: 15px 25px 15px 25px;
     border-radius: 6px;
     box-shadow: 2px 2px 5px -2px rgb(90, 88, 88);
 
@@ -281,12 +277,14 @@ ul > li:nth-child(7) {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+
+    padding: 10px 15px 10px 15px;
 
     background-color: var(--header-color);
     border-radius: 6px;
     box-shadow: 2px 2px 5px -2px rgb(90, 88, 88);
-    width: 100%;
+    
     
 }
 
@@ -298,6 +296,7 @@ ul > li:nth-child(7) {
 
     font-size: 12px;
     gap: 10px;
+    padding-bottom: 4px;
    
 
 }
@@ -306,6 +305,11 @@ ul > li:nth-child(7) {
     display: flex;
     flex-direction: column;
 
+}
+
+.trending-item-body > p:last-child {
+    font-size: 14px;
+    color: #666;
 }
 
 
@@ -324,11 +328,11 @@ ul > li:nth-child(7) {
  
     background-color: var(--main-content-color);
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 2fr 1fr
+    grid-template-rows: 1fr 1fr 1fr;
 }
 
 .heading-main-content {
-    padding-left: 15px;
+    padding-left: 25px;
     font-size: 12px;  
 
 }
@@ -342,11 +346,11 @@ ul > li:nth-child(7) {
     display: grid;
     justify-content: space-evenly;
     justify-items: center;
-    gap: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
+    gap: 25px;
+    padding-left: 25px;
+    padding-right: 25px;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    width: 100%;
+
   
     
 }
@@ -384,3 +388,88 @@ ul > li:nth-child(7) {
 
 /* Main content layout END*/
 
+@media only screen and (max-width: 900px) {
+
+    .announcements-container {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-left: 25px;
+        padding-right: 25px;
+        width: 100vw;
+ 
+    }
+
+    .content-trending {
+        width: 100%;
+    }
+
+    .open-icon {
+        display: block;
+    }
+    .sidebar {
+        grid-column: 1;
+        grid-row: 1;
+        width: 100%;
+     
+        padding: 0px 10px 0px 10px;
+    }
+
+    .container-logo-dashboard {
+        display: flex;
+        justify-content: space-evenly;
+        width: 100vw;
+
+    }
+
+    .logo {
+        align-self: flex-start;
+        padding-right: 50px;
+    }
+
+    .collapse {
+        display: none;
+        flex-direction: column;
+
+        
+    }
+
+    .open-icon {
+        font-size: 50px;
+        justify-self: flex-end;
+        cursor: pointer;
+    }
+
+    .header {
+        grid-column: 1;
+        grid-row: 2;
+        width: 100vw;
+
+        display: flex;
+        flex-direction: column;
+
+        padding-bottom: 15px;
+    }
+    
+    .grid-main-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+
+
+    .main-content {
+
+       grid-column: 1 / 1;
+
+        display: flex;
+        flex-direction: column;
+        width: 100vw;
+
+        align-items: center;
+        
+    }
+}
