--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 
 .grid-main-container {
     display: grid;
-    grid-template-columns: 1fr 6fr;
+    grid-template-columns: 0.8fr 5fr;
     grid-template-rows: 1fr;
 }
 
@@ -44,17 +44,31 @@
 
 ul > li {
     color: var(--text-color-sidebar);
-    font-weight: 600;
+    font-weight: 700;
     letter-spacing: 1px;
-    font-size: 15px;
+    font-size: 16px;
 
     cursor: pointer;
     text-decoration: none;
     list-style: none;
 }
 
+ul > li > a {
+    text-decoration: none;
+    color: var(--text-color-sidebar);
+
+    transition: all 0.5s ease-in-out;
+}
+
+
+ul > li > a:hover {
+    color: var(--text-color);
+    font-weight: 900;
+    padding-left: 5px;
+}
+
 ul > li > span {
-    font-size: 20px;
+    font-size: 22px;
     color: var(--text-color);
     font-weight: 900;
     padding: 10px;
@@ -71,9 +85,7 @@ ul > li:nth-child(7) {
 .logo-container {
     display: flex;
     align-items: center;
-    justify-items: center;
-    padding-top: 15px;
-    padding: 10px;
+    padding: 15px;
     font-size: 25px;
     font-weight: 900;
 }
@@ -97,13 +109,11 @@ ul > li:nth-child(7) {
     gap: 10px;
 
     grid-template-columns: 3fr 2fr;
-
 }
 
 .header-search-bar {
     grid-column: 1 / 2;
     padding-top: 20px;
-    
 }
 
 .header-search-bar-container {
@@ -131,6 +141,8 @@ ul > li:nth-child(7) {
 
 .search-bar:focus {
     outline: none;
+    border: 1px solid var(--sidebar-color);
+    background-color: rgb(240, 223, 223, 0.5);
 }
 
 .profile-right-corner {
@@ -148,11 +160,11 @@ ul > li:nth-child(7) {
 
 .profile-right-corner-container > span > p {
     font-size: 25px;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .profile-img {
-    width: 50px;
+    width: 52px;
 }
 
 .profile-img-greet {
@@ -161,6 +173,7 @@ ul > li:nth-child(7) {
 
 .profile-name-greet {
     grid-column: 1 / 2;
+    padding-bottom: 10px;
 }
 
 .profile-name-greet-container {
@@ -203,6 +216,12 @@ ul > li:nth-child(7) {
     padding: 8px 5px 8px 5px;
     background-color: var(--buttons-color);
     color: var(--text-color-white);
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
+}
+
+button:hover {
+    transform: scale(1.2);
 }
 
 /* Header Layout END */
@@ -226,7 +245,6 @@ ul > li:nth-child(7) {
 
 .trending-img {
     width: 35px;
-    
 }
 
 .content-announcements {
@@ -237,7 +255,7 @@ ul > li:nth-child(7) {
     padding: 15px 25px 15px 25px;
     border-radius: 6px;
     box-shadow: 2px 2px 5px -2px rgb(90, 88, 88);
-
+    height: 100%;
 }
 
 .content-item {
@@ -259,7 +277,6 @@ ul > li:nth-child(7) {
     font-size: 10px;
     color: #666;
     letter-spacing: 1px;
-    
 }
 
 .heading-announcements,
@@ -268,9 +285,7 @@ ul > li:nth-child(7) {
     padding-top: 10px;
     padding-bottom: 3px;
     font-size: 16px;
-   
 }
-
 
 .content-trending {
     display: flex;
@@ -283,8 +298,8 @@ ul > li:nth-child(7) {
     background-color: var(--header-color);
     border-radius: 6px;
     box-shadow: 2px 2px 5px -2px rgb(90, 88, 88);
-    
-    
+    padding-top: 20px;
+    padding-bottom: 20px;    
 }
 
 .trending-item {
@@ -295,22 +310,18 @@ ul > li:nth-child(7) {
 
     font-size: 12px;
     gap: 10px;
-    padding-bottom: 4px;
-   
-
+    padding-bottom: 25px;
 }
 
 .trending-item-body {
     display: flex;
     flex-direction: column;
-
 }
 
 .trending-item-body > p:last-child {
     font-size: 14px;
     color: #666;
 }
-
 
 /* Information section layout END
 
@@ -324,7 +335,6 @@ ul > li:nth-child(7) {
   
     align-items: center;
   
- 
     background-color: var(--main-content-color);
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -333,14 +343,12 @@ ul > li:nth-child(7) {
 .heading-main-content {
     padding-left: 25px;
     font-size: 12px;  
-
 }
 
 /* Cards layout main content */
 
 .cards {
     grid-column: 1 / 2;
-    grid-row: 1 / 3;
  
     display: grid;
     justify-content: space-evenly;
@@ -349,35 +357,39 @@ ul > li:nth-child(7) {
     padding-left: 25px;
     padding-right: 25px;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-
-  
-    
 }
 
 .card {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-around;
 
     padding: 15px;
     background-color: #ffffff;
     box-shadow: 2px 2px 5px -2px rgb(90, 88, 88);
     border-radius: 6px;
     border-left: 5px solid #f0b429;;
-    height: 140px;
     width: 100%;
+    height: 180px;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    flex-wrap: wrap;
+    flex: 0 0 100%;
 }
 
 .card-heading {
     font-size: 14px;
-    font-weight: 700;
-    
+    font-weight: 900 !important;
 }
 
 .card-text {
     font-size: 12px;
     color: #666;
- 
 }
 
 .card-buttons {
@@ -385,7 +397,19 @@ ul > li:nth-child(7) {
     margin-top: 20px;
 }
 
+.card-buttons > a {
+    text-decoration: none;
+    cursor: pointer;
+    color: var(--text-color-sidebar);
+}
+
+.card-buttons > a:hover {
+    opacity: 0.6;
+}
+
 /* Main content layout END*/
+
+/* Mobile */
 
 @media only screen and (max-width: 900px) {
 
@@ -399,7 +423,6 @@ ul > li:nth-child(7) {
         padding-left: 25px;
         padding-right: 25px;
         width: 100vw;
- 
     }
 
     .content-trending {
@@ -409,21 +432,20 @@ ul > li:nth-child(7) {
     .open-icon {
         display: block;
     }
+
     .sidebar {
         grid-column: 1;
         grid-row: 1;
-        width: 100%;
-     
+        width: 100%;     
         padding: 0px 10px 0px 10px;
-
-        border-bottom: 2px solid orange;
     }
+
 
     .container-logo-dashboard {
         display: flex;
         justify-content: space-evenly;
+        align-items: center;
         width: 100vw;
-
     }
 
     .logo {
@@ -431,25 +453,23 @@ ul > li:nth-child(7) {
         padding-right: 50px;
     }
 
-    .collapse {
-        height: 0px;
+    .collapse {    
         flex-direction: column;
         width: 100vw;
-        
-
-        transition: height 0.5s ease-in-out;
-
-        background-color: #ffffff70;
-
-        
-      
+        transition: 0.7s ease-in-out;
     }
 
     .collapse.active {
         height: 100%;
         padding-bottom: 25px;
+    }
 
+    nav {
+        height: 0px;
+    }
 
+    nav.active {
+        height: 100%;
     }
 
     .open-icon {
@@ -485,6 +505,5 @@ ul > li:nth-child(7) {
         width: 100vw;
 
         align-items: center;
-        
     }
 }
